fix unperfection mobile & laptop screen

--- a/src/ResultPage/_result.scss
+++ b/src/ResultPage/_result.scss
@@ -114,10 +114,7 @@
   }
 
   .itemDesc {
-    margin: auto;
-    margin-bottom: 40px;
-    margin-top: 100px;
-    width: 50%;
+    width: 100%;
     transition: 0.2s linear all;
 
     .title {
@@ -137,13 +134,12 @@
     }
 
     .content {
-      margin-left: 50px;
-      margin-right: 70px;
+      margin-left: 10px;
+      margin-right: 10px;
     }
   }
 
   .item-desc-btn {
-    margin-left: 20px;
     margin-top: 80px;
     width: 250px;
     height: 45px;
@@ -155,18 +151,13 @@
   }
 
   .item-desc-btn:hover {
-    width: 320px;
+    width: 265px;
     background-color: #79c76b;
   }
 
   .insights-container {
-    width: 100%;
-    max-width: 500px;
-    max-height: 350px;
     margin-bottom: 30px;
     margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 0px;
   }
 
   .insights-item {
@@ -183,10 +174,11 @@
   background-position: center;
   height: 100vh;
   width: 100vw;
-  display: flex;
   justify-content: space-around;
   margin-top: 80px;
   padding: 0 20px;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 
   h1 {
     width: 100%;
@@ -293,24 +285,19 @@
   font-size: 40px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100;
-}
-
-.whatsapp-icon {
-  margin-top: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* for mobile */
 @media screen and (max-width: 767px) {
-  .whatsapp-icon {
-    margin-top: 10px;
-  }
-
-  .whatsapp_float {
-    width: 40px;
-    height: 40px;
-    bottom: 20px;
-    right: 10px;
-    font-size: 22px;
+  .whatsapp-float {
+    width: 60px;
+    height: 60px;
+    bottom: 24px;
+    right: 24px;
+    font-size: 30px;
   }
 }
 
@@ -379,14 +366,20 @@
       }
 
       .item-desc-btn {
-        width: 85%;
-        float: left !important;
-        margin: 10px 0;
+        margin-top: 40px;
+        width: 215px;
+        height: 40px;
+        font-size: calc(0.8rem + 0.8vw);
       }
 
       .item-desc-btn:hover {
-        width: 88%;
+        width: 220px;
       }
+    }
+
+    .insights-container {
+      margin-bottom: 10px;
+      margin-top: 15px;
     }
   }
 
@@ -450,26 +443,43 @@
       }
     }
 
+    .itemDesc-container {
+      padding-left: 10px !important;
+      padding-right: 10px !important;
+    }
+
     .itemDesc {
       .title {
-        font-size: calc(0.95rem + 1vw);
+        font-size: calc(0.9rem + 1vw);
       }
 
       .price {
-        font-size: calc(0.8rem + 0.9vw);
+        font-size: calc(0.75rem + 0.8vw);
       }
 
       .item-desc-btn {
+        margin-top: 10px;
         width: 100%;
+        height: 35px;
+        font-size: calc(0.7rem + 0.8vw);
       }
 
       .item-desc-btn:hover {
-        width: 98%;
+        width: 102%;
       }
 
       .content {
         margin: 0 4px 0 0;
       }
+    }
+
+    .insights-container {
+      margin-bottom: 0;
+      margin-top: 10px;
+    }
+
+    .insights-item {
+      margin-left: 5px;
     }
   }
 
